--- a/Cult1/styles/styles2.css
+++ b/Cult1/styles/styles2.css
@@ -368,6 +368,7 @@ footer {
     background-color: #b5d0e3; }
 
   .menu__header {
+    width: 100%;
     position: absolute;
     margin-top: 56px;
     border-top: none; }
@@ -544,6 +545,9 @@ footer {
     footer .footer-btn__text {
       display: none; } }
 @media only screen and (max-width: 400px) {
+  .transparent {
+    height: 41%; }
+
   .online__button__wrap {
     width: 50%; }
 
@@ -563,6 +567,11 @@ footer {
       width: 80px; }
     .slider .logo {
       top: 36%; }
+    .slider .flx-slider__wrap {
+      top: 20px; }
+
+  .services {
+    margin-top: 20px; }
 
   footer {
     /*.btn__online {
@@ -571,18 +580,14 @@ footer {
     */ } }
 @media only screen and (max-width: 390px) {
   .transparent {
-    top: 70%;
-    height: 40%; }
+    top: 70%; }
 
   .slider .flx-slider__wrap {
     top: 20px; } }
 @media only screen and (max-width: 360px) {
-  .transparent {
-    height: 41%; } }
+  .online__button__wrap {
+    padding-left: 0; } }
 @media only screen and (max-width: 359px) {
-  .transparent {
-    height: 41%; }
-
   .slider .logo {
     top: 41%; }
   .slider .logo__img {
