--- a/Cult1/styles/styles2.scss
+++ b/Cult1/styles/styles2.scss
@@ -209,7 +209,7 @@ nav {
     }
     
     .services__block {
-        height: 470px;
+        height: auto;//470px;
         box-shadow: 0 0 13px rgba(0, 0, 0, 0.5);
         
     }
