--- a/Cult1/styles/styles2.css
+++ b/Cult1/styles/styles2.css
@@ -202,7 +202,8 @@ header {
   border-radius: 6px;
   background: #eeeeee;
   border: 1px solid #2aa5a7;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  padding-left: 2%; }
 .online .t1 {
   display: block;
   font: 14px "Roboto Light", sans-serif;
@@ -212,7 +213,8 @@ header {
   width: 90%;
   height: 80px;
   border: 1px solid #2aa5a7;
-  border-radius: 5px; }
+  border-radius: 5px;
+  padding-left: 2%; }
 .online .btn__form {
   width: 50%;
   height: 40px;
@@ -226,6 +228,49 @@ header {
   box-shadow: 0 0 13px rgba(0, 0, 0, 0.5); }
 .online input::-webkit-input-placeholder {
   text-indent: 16.5px; }
+
+.modal__window_wrap {
+  display: none;
+  position: absolute;
+  z-index: 10;
+  padding-bottom: 15px;
+  text-align: center;
+  margin-left: 20%;
+  background: white;
+  -webkit-box-shadow: 2px 10px 79px 23px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 10px 79px 23px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 10px 79px 23px rgba(0, 0, 0, 0.75);
+  border-radius: 10px; }
+  .modal__window_wrap .modal__window__footer {
+    font: bold 16px sans-serif;
+    display: block; }
+  .modal__window_wrap .modal__window_txt {
+    display: block;
+    text-align: left;
+    font: 16px sans-serif; }
+  .modal__window_wrap .btn__post,
+  .modal__window_wrap .btn__ago {
+    width: 20%;
+    height: 30px;
+    margin-right: 10%;
+    margin-top: 15px;
+    border-radius: 15px;
+    border: 1px solid #1d7b7b;
+    background: #1d7b7b;
+    color: white; }
+  .modal__window_wrap .btn__post {
+    margin-right: 0; }
+  .modal__window_wrap .btn__post:hover,
+  .modal__window_wrap .btn__ago:hover {
+    border: 1px solid #68a9a9;
+    background: #68a9a9; }
+  .modal__window_wrap .modal__name-form,
+  .modal__window_wrap .modal__tel-form,
+  .modal__window_wrap .modal__data-form,
+  .modal__window_wrap .modal__time-form,
+  .modal__window_wrap .modal__comment-form {
+    margin-left: 2%;
+    font-weight: bold; }
 
 .contacts {
   margin-bottom: 25px; }
