--- a/Cult1/styles/styles2.scss
+++ b/Cult1/styles/styles2.scss
@@ -309,6 +309,7 @@ nav {
         background: #eeeeee;
         border: 1px solid #2aa5a7;
         margin-bottom: 10px;
+        padding-left: 2%;
     }
     
     .t1 {
@@ -322,6 +323,7 @@ nav {
         height: 80px;
         border: 1px solid #2aa5a7;
         border-radius: 5px;
+        padding-left: 2%;
     }
     
     .btn__form {
@@ -341,6 +343,64 @@ nav {
         text-indent: 16.5px;
     }
     
+}
+.modal__window_wrap {
+    display: none;
+    position: absolute;
+    z-index: 10;
+    padding-bottom: 15px;
+    text-align: center;
+    margin-left: 20%;
+    background: white;
+    -webkit-box-shadow: 2px 10px 79px 23px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 10px 79px 23px rgba(0,0,0,0.75);
+    box-shadow: 2px 10px 79px 23px rgba(0,0,0,0.75);
+    border-radius: 10px;
+    
+    .modal__window__footer {
+        font:bold 16px sans-serif;
+        display: block;
+        //color: red;
+    }
+    
+    .modal__window_txt {
+        display: block;
+        text-align: left;
+        font: 16px sans-serif;
+    }
+    
+    .btn__post,
+    .btn__ago {
+        width: 20%;
+        height: 30px;
+        margin-right: 10%;
+        margin-top: 15px;
+        border-radius: 15px;
+        border: 1px solid #1d7b7b;
+        background: #1d7b7b;
+        color: white;
+    }
+    
+    .btn__post {
+        margin-right: 0;
+    }
+    
+    .btn__post:hover,
+    .btn__ago:hover {
+        border: 1px solid #68a9a9;
+        background: #68a9a9;
+        
+    }
+    
+   
+    .modal__name-form,
+    .modal__tel-form,
+    .modal__data-form,
+    .modal__time-form,
+    .modal__comment-form {
+        margin-left: 2%;
+        font-weight: bold;
+    }
 }
 /////// END ONLINE ////////////////////
 
