--- a/Cult1/styles/styles2.css
+++ b/Cult1/styles/styles2.css
@@ -660,5 +660,8 @@ footer {
 @media only screen and (max-width: 340px) {
   .transparent {
     height: 49.5%; } }
+@media only screen and (max-width: 320px) {
+  .navbar-default {
+    width: 320px; } }
 
 /*# sourceMappingURL=styles2.css.map */
