--- a/Cult1/styles/styles2.scss
+++ b/Cult1/styles/styles2.scss
@@ -1053,3 +1053,10 @@ footer {
     height: 49.5%;
 }
 }
+
+@media only screen and (max-width : 320px) {
+    .navbar-default {
+        width: 320px;
+    }
+    
+}
