--- a/Cult1/styles/jquery.datepick.css
+++ b/Cult1/styles/jquery.datepick.css
@@ -230,6 +230,6 @@ button.datepick-cmd {
 
 @media only screen and (max-width : 550px) {
     .datepick { 
-    width: 70%;
+    width: 70%!important;
 }
 }
