--- a/Cult1/styles/styles2.css
+++ b/Cult1/styles/styles2.css
@@ -165,15 +165,15 @@ header {
   .price .table__price .main__th {
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 10px;
+    padding-left: 1%;
     font: 18px sans-serif;
     font-weight: normal; }
   .price .table__price .table__line td {
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 10px;
+    padding-left: 1%;
     text-align: left;
-    font: 20px,sans-serif; }
+    font: 14px sans-serif; }
   .price .table__price .main__th:last-child,
   .price .table__price .table__line td:last-child,
   .price .table__price .main__th:nth-child(2),
@@ -612,33 +612,18 @@ footer {
   .online__button__wrap {
     width: 50%; }
 
-  .slider {
-    /*.online__button__wrap {
-        top: 58%;
-        button {
-            width: 60%;//45%;
-            //font-size: 15px;
-        }
-        
-    }
-    .link__online {
-        font-size: 18px;
-    }*/ }
-    .slider .logo__img {
-      width: 80px; }
-    .slider .logo {
-      top: 36%; }
-    .slider .flx-slider__wrap {
-      top: 20px; }
+  .slider .logo__img {
+    width: 80px; }
+  .slider .logo {
+    top: 36%; }
+  .slider .flx-slider__wrap {
+    top: 20px; }
 
   .services {
     margin-top: 20px; }
 
-  footer {
-    /*.btn__online {
-        font-size: 14px;
-    }
-    */ } }
+  .price .table__price .table__line td {
+    font-size: 12px; } }
 @media only screen and (max-width: 390px) {
   .transparent {
     top: 70%;
@@ -660,8 +645,5 @@ footer {
 @media only screen and (max-width: 340px) {
   .transparent {
     height: 49.5%; } }
-@media only screen and (max-width: 320px) {
-  .navbar-default {
-    width: 320px; } }
 
 /*# sourceMappingURL=styles2.css.map */
