--- a/Cult1/styles/styles2.scss
+++ b/Cult1/styles/styles2.scss
@@ -148,7 +148,7 @@ nav {
     position: absolute;
     z-index: 3;
     top:80%;
-    padding-left: 45px;
+    //padding-left: 45px;
     
 }
 .block__text__action {
