--- a/imperiya/styles/style.css
+++ b/imperiya/styles/style.css
@@ -269,13 +269,6 @@ body {
 }
 
 
-.clients,
-.news,
-.seo,
-.reviews,
-.footer_content {
-    margin-top: 60px;
-}
 
 .h3 {
     margin-top: 0;
@@ -573,8 +566,29 @@ body {
 
 
 /* REVIEWS */
+.reviews {
+    margin-top: 37px;
+}
+.reviews .h2 {
+   margin-left: 43.5%;
+    margin-top: 2.2%;
+}
+.reviews .h3 {
+   margin-left: 39.7%;
+    margin-bottom: 8%;
+}
 .reviews__photo {
     float: left;
+}
+
+.reviews__block:nth-child(2n){
+    padding-left: 5px;
+    padding-right: 25px;
+}
+
+.reviews__block:nth-child(3n) {
+    padding-left: 0;
+    padding-right: 30px;
 }
 
 .reviews__block,
@@ -598,7 +612,7 @@ body {
 .reviews__text {
     display: block;
     float: left;
-   padding: 10px 7px 10px 0;
+   padding: 10px 7px 8px 0;
     border-bottom: 1px solid #e1e1e1;
     font-size: 16px;
     font-weight: 400;
@@ -620,10 +634,58 @@ body {
     float: right;
     font-size: 16px;
     font-weight: 700;
+        line-height: 2;
+    margin-right: 10px;
     color: #949494;
 }
 
+/* Clients*/
+.clients {
+    margin-top: 60px;
+    
+}
+.clients .h2 {
+   margin-left: 38.8%;
+    margin-top: 18px; 
+}
+
+.clients .h3 {
+    margin-left: 40.8%;
+    margin-bottom: 4.6%;
+}
+.block__client {
+    text-align: center;
+}
+.block__client:first-child,
+.block__client:last-child {
+    text-align: left;
+}
+.block__client:nth-child(2n) .clients__logo {
+    margin-top: 10px;
+}
+.block__client:nth-child(3n) .clients__logo{
+    margin-top: 12px;
+}
+.block__client:nth-child(4n) .clients__logo{
+    margin-top: 17px;
+}
+.block__client:nth-child(5n) .clients__logo{
+    margin-top: 20px;
+}
 /* NEWS */
+.news {
+    margin-top: 96px;
+}
+
+.news .h2 {
+    margin-left: 43%;
+    
+}
+.news .h3 {
+    margin-left: 38.5%;
+    margin-bottom: 5.9%;
+    
+}
 .news__img {
         max-width: 100%;
         height: auto;
@@ -657,6 +719,18 @@ body {
     font-size: 16px;
     font-weight: 700;
     color: #676767;
+    line-height: 1.9;
+    margin-right: 9px;
+    margin-bottom: 13px;
+}
+
+.block__news:nth-child(2n) {
+    padding-left: 5px;
+    padding-right: 25px;
+}
+.block__news:nth-child(3n) {
+    padding-left: 0px;
+    padding-right: 30px;
 }
 
 .block__news:hover .news__h3 {
@@ -686,8 +760,21 @@ body {
     display: block;
 }
 
-/* SEO */
 
+/* SEO */
+.seo {
+    margin-top: 75px;
+}
+.seo .h2 {
+    margin-left: 43.5%;
+} 
+.seo .h3 {
+    margin-left: 44.8%;
+    margin-bottom: 3%;
+}
+.seo__text {
+    width: 97%;
+}
 #text_more {
     display: none;
 }
@@ -705,8 +792,12 @@ body {
     width: 25px;
     border: none;
     color: white;
+    background: url(../img/down.png)no-repeat;
+    margin: 19px 0 0 48.5%;
+/*
     background: #686868;
-    margin: 10px auto;
+    
+*/
 }
 
 #button_d:hover {
@@ -715,6 +806,7 @@ body {
 
 /* FOOTER */
 .footer_content {
+    margin-top: 13.5%;
     background: #444444;
 }
 
@@ -730,7 +822,7 @@ body {
 }
 
 .footer_content .row {
-    padding: 30px 15px;
+    padding: 30px 15px 21px 15px;
 }
 
 .h3__footer {
@@ -783,6 +875,9 @@ body {
     font-size: 16px;
     font-weight: 400;
     color: white;
+    width: 86%;
+    padding-bottom: 0;
+    line-height: 1.3;
 }
 
 .contacts {
@@ -790,6 +885,8 @@ body {
 }
 
 .add__email {
+    display: inline-block;
+    margin-top: 9px;
     font-size: 14px;
     font-weight: 700;
 /*    font-family: 'Arsenal', sans-serif;*/
@@ -983,6 +1080,22 @@ body {
         padding: 10px 0;
         text-align: center;
     }
+    .block__client:first-child,
+.block__client:last-child {
+    text-align: center;
+    }
+    
+    .reviews__block:nth-child(2n),
+    .reviews__block:nth-child(3n){
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    
+    .block__news:nth-child(2n),
+    .block__news:nth-child(3n) {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
     
 }
